# agora

./: .gitignore  AGENTS.md  Cargo.toml
crates/agora-core/: Cargo.toml
crates/agora-core/src/: lib.rs
crates/agora-core/src/lifecycle/: mod.rs  shutdown.rs  signal.rs
crates/agora-core/src/logger/: entry.rs  mod.rs
crates/agora-core/tests/: lifecycle.rs  lifecycle_cleanup.rs  lifecycle_signal.rs  logger.rs  shutdown_normal.rs  signal.rs
crates/agora-node/: Cargo.toml
crates/agora-node/src/: config.rs  lib.rs  main.rs  output.rs
crates/agora-node/src/agent/: codex.rs  command.rs  custom.rs  mod.rs  run.rs
crates/agora-node/src/channel/: lark.rs  mod.rs
crates/agora-node/src/channel/lark/: card.rs  channel.rs  lark_api.rs  mod.rs
crates/agora-node/src/channel/telegram/: channel.rs  mod.rs  rich_message.rs  telegram_api.rs
crates/agora-node/src/daemon/: active_runs.rs  command.rs  execution.rs  mod.rs  session_queue.rs
crates/agora-node/src/daemon/command/: ask.rs  executor.rs  mod.rs  registry.rs  reset.rs  stop.rs
crates/agora-node/src/i18n/: mod.rs  zh_cn.rs
crates/agora-node/src/store/: mod.rs  schema.sql
crates/agora-node/src/task/: mod.rs  output.rs
crates/agora-node/tests/: agent.rs  command.rs  config.rs  daemon.rs  hello.rs  lark_channel.rs  store.rs
crates/agora-node/tests/agent/: codex.rs  control.rs  custom.rs  main.rs
crates/agora-node/tests/internal/: daemon.rs  daemon_command.rs  http_mock.rs  lark_card.rs  lark_channel.rs  mod.rs  telegram_channel.rs  telegram_rich_message.rs
crates/agora-node/tests/internal/daemon/: dispatcher.rs  queue.rs  sessions.rs
crates/agora-node/tests/internal/daemon_command/: ask.rs  channel.rs  execution.rs  registry.rs  reset.rs
crates/agora-node/tests/internal/lark_card/: api.rs  content.rs
crates/agora-node/tests/internal/lark_channel/: attachments.rs  messages.rs  protocol.rs
crates/agora-node/tests/internal/telegram_channel/: api.rs  messages.rs
crates/agora-node/tests/internal/telegram_rich_message/: api.rs  content.rs
crates/agora-sandbox/: Cargo.toml
crates/agora-sandbox/src/: lib.rs  main.rs
crates/agora-sandbox/src/audit/: mod.rs
crates/agora-sandbox/src/hook/: config.rs  control.rs  interpose.rs  mod.rs  proxy.rs  socket.rs  tests.rs
crates/agora-sandbox/src/network/: config.rs  control.rs  inspection.rs  inspection_tests.rs  integration_tests.rs  mod.rs  proxy.rs  route.rs  tests.rs
crates/agora-sandbox/src/network/tests/: mod.rs  proxy.rs
crates/agora-sandbox/src/protocol/: mod.rs  tests.rs
crates/agora-sandbox/src/runner/: mod.rs  tests.rs
crates/agora-sandbox/tests/: audit.rs  cli.rs  hello.rs  network_proxy.rs  runner.rs
crates/agora-sandbox/tests/support/: mod.rs
crates/agora-server/: Cargo.toml
crates/agora-server/src/: main.rs
crates/agora-server/tests/: hello.rs
