[workspace]
resolver = "3"
members = [
    "crates/agora-core",
    "crates/agora-node",
    "crates/agora-server",
    "crates/agora-sandbox",
]

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.103"
tokio = { version = "1.52.3", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
clap = { version = "4.6.1", features = ["derive"] }
