[workspace]
resolver = "3"
members = [
    "crates/agora-core",
    "crates/agora-node",
    "crates/agora-server",
    "crates/agora-sandbox",
]

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.104"
tokio = { version = "1.53.1", features = ["full"] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
clap = { version = "4.6.4", features = ["derive"] }
