[workspace]
resolver = "3"
members = [
    "crates/agora-core",
    "crates/agora-node",
    "crates/agora-server",
    "crates/agora-sandbox",
]

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.104"
tokio = { version = "1.53.1", features = ["full"] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
clap = { version = "4.6.4", features = ["derive"] }
chrono = "0.4.45"
uuid = { version = "1.24.0", features = ["v4"] }
libc = "0.2.189"
shell-words = "1.1.1"
rustls = "0.23.41"
httparse = "1.10.1"
