[package]
name = "agora-node"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
agora-core = { path = "../agora-core" }
anyhow = { workspace = true }
clap = { workspace = true }
futures-util = "0.3.32"
prost = "0.14.4"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "query", "rustls"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = "3.27.0"
tokio = { workspace = true }
tokio-tungstenite = { version = "0.30.0", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
