[package]
name = "agora-sandbox"
version = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
agora-core = { path = "../agora-core" }
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
httparse = { workspace = true }
libc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shell-words = { workspace = true }
rustls = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
